[package]
name = "reqwest-tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
derive = "1.0.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
